Fixes featured content card alignment in IE11.
http://p.tri.be/EMwre4

--- a/scss/_components/_featured-content.scss
+++ b/scss/_components/_featured-content.scss
@@ -62,7 +62,6 @@
 }
 
 .featured-content__body {
-	align-items: center;
 	display: flex;
 	flex-direction: column;
 }
